2010-02-28	Victor Mataré
		* parser.h, parser.c: This is the new config parser. It extends the
		config syntax to allow specifying correction values for all sensors.
		* config.c: Major rewrite to use new parser instead of sscanf.
		* system.c: Use the new parser for reading the temperatures from
		/proc/acpi/ibm/thermal, fix some memory leaks.
		* message.h: Remove some redundant messaging, add new messages for new
		error conditions.
		* globaldefs.h: Redesign struct tf_config to accomodate new
		functionality, add global buffer to reduce cyclic malloc()ing.
		* thinkfan.c: Minor changes for consistency.
		* README: Update to explain sensor correction values.
		* NOTES: New file. Explain important changes in v0.7.

2009-11-21	Victor Mataré
		* README: Reduce burble, update to reflect new behaviour
		* thinkfan.conf.example: Split into thinkfan.conf.sysfs and
		thinkfan.conf.thinkpad.
		* thinkfan.c: Remove DEBUG flag. Instead print fan speed debug
		messages when not in quiet mode and running in the foreground.
		* thinkfan-0.6.5: Release

2009-11-16	Victor Mataré
		* system.c, system.h: Deal with messy behaviour of sysfs.
		* messages.h: rename to message.h.
		* message.h: Add some newlines to structure the output.
		* config.c, thinkfan.c: Improve control flow to fix memory leaks on
		error conditions.

2009-11-15	Victor Mataré
		* messages.h, system.c, thinkfan.c: Improve/fix error handling and try
		to make error messages more meaningful.

2009-11-13	Victor Mataré
		* *.c, *.h: Refactor the entire program into more easily maintainable
		modules and use a Makefile. Consider the fan-depulsing hack "working". 

2009-10-28	Victor Mataré
		* thinkfan-0.6_rc1: Release

2009-10-27	Victor Mataré
		* tf_system.c: Add methods for disengaging the fan shortly, to
		implement the pulsing-fan workaround.
		* thinkfan.c, tf_system.c, messages.h, thinkfan.h: Reduce argument
		passing from inner loop, accomodate the pulsing-fan workaround